--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,9 @@
   <!-- your app's js -->
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
+  <script src="js/directives.js"></script>
   <script src="js/home/home.controller.js"></script>
+  <script src="js/item/item.controller.js"></script>
 </head>
 
 <body ng-app="DoubanTodoApp">
@@ -34,12 +36,13 @@
       <ion-content>
       </ion-content>
     </ion-pane> -->
-  <ion-nav-bar class="bar-light nav-title-slide-ios7" ng-class="barShadow">
+  <ion-nav-bar class="bar-light nav-title-slide-ios7" >
     <ion-nav-back-button class="button-icon icon  ion-ios7-arrow-back">
       Back
     </ion-nav-back-button>
   </ion-nav-bar>
   <ion-nav-view name="home"></ion-nav-view>
+  <ion-nav-view name="item"></ion-nav-view>
 </body>
 
 </html>
