--- a/www/js/home/home.template.html
+++ b/www/js/home/home.template.html
@@ -1,10 +1,10 @@
 <ion-view title="Douban Todo" ng-init="init()">
   <ion-nav-buttons side="right">
-    <a class="button button-icon icon ion-plus" href="#/tab/home/search">
+    <a class="button button-icon icon ion-plus" href="#/search">
     </a>
   </ion-nav-buttons>
 
-  <ion-content class="list app-item-list" scroll-show-bar-shadow>
+  <ion-content class="app-item-list" scroll-show-bar-shadow>
     <ion-refresher on-refresh="doRefresh()">
     </ion-refresher>
     <a class="item item-thumbnail-left app-item-simple" ng-repeat="toDoItem in toDoList"
