--- a/www/js/item/item.template.html
+++ b/www/js/item/item.template.html
@@ -6,10 +6,10 @@
     <h1 class="title">Item Detail</h1>
   </ion-header-bar>
   <ion-content>
-    <img class="full-image" src={{toDoItem.image}}>
+    <img class="full-image" src={{todoItem.doubanData.image}}>
     <div class="item">
-      <h1>{{toDoItem.title}}</h1>
-      <p>{{toDoItem.author[0].name}}</p>
+      <h1>{{todoItem.doubanData.title}}</h1>
+      <p>{{todoItem.doubanData.author[0].name}}</p>
     </div>
   </ion-content>
 </ion-modal-view>
