完善搜索提示, popupMenu改用Modal. )) 将搜索按状态表示, 增加小型下拉框提示语,搜索到多少条等

--- a/www/js/home/homePopupMenu.template.html
+++ b/www/js/home/homePopupMenu.template.html
@@ -1,8 +1,7 @@
-<div class="popup-wrapper" ng-controller="HomePopupCtrl">
-  <div class="item" ng-click="deleteItem()">
-    Delete
-  </div>
-  <div class="item">
-    Delete
-  </div>
-</div>
+<ion-modal-view ng-controller="HomePopupCtrl" ng-init="init()" class="popup-menu-modal">
+  <ion-content>
+    <div class="item" ng-click="deleteItem()">
+      <p>Delete</p>
+    </div>
+  </ion-content>
+</ion-modal-view>
