--- a/www/js/home/home.template.html
+++ b/www/js/home/home.template.html
@@ -7,7 +7,7 @@
   <ion-content class="app-item-list" scroll-show-bar-shadow>
     <ion-refresher on-refresh="doRefresh()">
     </ion-refresher>
-    <div class="item item-thumbnail-left app-item-simple" ng-repeat="todoItem in todoList" ng-click="openModal(todoItem.doubanData.id)" on-hold="showItemMenu(todoItem)">
+    <div class="item item-thumbnail-left app-item-simple" ng-repeat="todoItem in todoList" ng-click="openItemModal(todoItem.doubanData.id)" on-hold="openItemMenu(todoItem)">
       <img src={{todoItem.doubanData.image}}>
       <div class="description">
         <h2>{{todoItem.doubanData.title}}</h2>
