完善下拉提示框

--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,7 @@
 </head>
 
 <body ng-app="DoubanTodoApp">
-  <ion-nav-bar class="bar-light nav-title-slide-ios7 bar-header-shadow" process-bar flash-bar>
+  <ion-nav-bar class="bar-light nav-title-slide-ios7 bar-header-shadow" process-bar flash-bar bar-text="'sdfsf'">
     <ion-nav-back-button class="button-icon icon  ion-ios7-arrow-back">
     </ion-nav-back-button>
 
