--- a/www/index.html
+++ b/www/index.html
@@ -12,9 +12,11 @@
   <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above -->
   <link href="css/ionic.app.css" rel="stylesheet">
 
+  <!-- 自用库 -->
   <script src="lib/d3/d3.js"></script>
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="lib/jQuery/dist/jquery.js"></script>
   <script src="https://cn.avoscloud.com/scripts/lib/av-0.4.3.min.js"></script>
+  
   <!-- ionic/angularjs js -->
   <script src="lib/ionic/js/ionic.bundle.js"></script>
 
