圆形进度条

--- a/www/js/item/item.template.html
+++ b/www/js/item/item.template.html
@@ -14,7 +14,7 @@
     <div class="img-convert-full">
       <img class="full-image" src={{todoItem.doubanData.image}}>
     </div>
-    <div class="svg-wraper"></div>
+    <div class="svg-wraper" process-circle></div>
     <div class="item">
       <h1>{{todoItem.doubanData.title}}</h1>
       <p>{{todoItem.doubanData.author[0].name}}</p>
