--- a/www/js/item/item.template.html
+++ b/www/js/item/item.template.html
@@ -11,10 +11,12 @@
         <img class="full-image" src={{todoItem.doubanData.image}}>
       </div>
     </div> -->
-    <div class="img-convert-full">
-      <img class="full-image" src={{todoItem.doubanData.image}}>
+    <div class="img-convert-full" style='background-image:url("{{
+  todoItem.doubanData.image}}");'>
+      <!-- <img class="full-image" src={{todoItem.doubanData.image}}> -->
+      <div class="svg-wraper"></div>
     </div>
-    <div class="svg-wraper" process-circle></div>
+    
     <div class="item">
       <h1>{{todoItem.doubanData.title}}</h1>
       <p>{{todoItem.doubanData.author[0].name}}</p>
