--- a/www/js/item/item.template.html
+++ b/www/js/item/item.template.html
@@ -11,10 +11,10 @@
         <img class="full-image" src={{todoItem.doubanData.image}}>
       </div>
     </div> -->
+    <div class="box-pos"></div>
     <div class="img-convert-full" style='background-image:url("{{
   todoItem.doubanData.image}}");'>
       <!-- <img class="full-image" src={{todoItem.doubanData.image}}> -->
-      <div class="svg-wraper"></div>
     </div>
     
     <div class="item">
