--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,8 @@
   <!-- cordova script (this will be a 404 during development) -->
   <script src="cordova.js"></script>
 
+  <!-- own lib js -->
+  <script src="js/mylib/CircleProcessBar.js"></script>
   <!-- your app's js -->
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
