--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,7 @@
   <script src="js/home/home.controller.js"></script>
   <script src="js/item/item.controller.js"></script>
   <script src="js/search/search.controller.js"></script>
+  <script src="js/itemEdit/itemEdit.controller.js"></script>
 </head>
 
 <body ng-app="DoubanTodoApp">
@@ -41,7 +42,6 @@
 
   </ion-nav-bar>
   <ion-nav-view name="home"></ion-nav-view>
-  <ion-nav-view name="search"></ion-nav-view>
 </body>
 
 </html>
