--- a/www/js/search/search.template.html
+++ b/www/js/search/search.template.html
@@ -22,7 +22,8 @@
         <h2>{{searchItem.title}}</h2>
         <p>{{searchItem.author[0].name}}</p>
       </div>
-      <div class="button button-icon icon ion-ios7-plus-empty item-add-button" ng-click="addToTodoList({{searchItem}})" ng-hide="searchItem.addSuccess"></div>
+      <div class="button button-icon icon ion-ios7-plus-empty item-add-button" ng-click="addToTodoList(searchItem)">
+      </div>
     </div>
 
     <div ng-hide="isZero()">
