--- a/www/js/itemEdit/itemEdit.template.html
+++ b/www/js/itemEdit/itemEdit.template.html
@@ -1,15 +1,17 @@
 <ion-view title="Edit" ng-init="init()">
-  <ion-content>
-    <div class="item item-thumbnail-left app-item-simple">
+  <form name="timeForm" novalidate ng-submit="signupForm()">
+    <ion-content>
+      <div class="item item-thumbnail-left app-item-simple">
 
-      <img src={{addItem.doubanAPIData.image}}>
-      <div class="description">
-        <h2>{{addItem.doubanAPIData.title}}</h2>
-        <p>{{addItem.doubanAPIData.author[0].name}}</p>
+        <img src={{addItem.doubanAPIData.image}}>
+        <div class="description">
+          <h2>{{addItem.doubanAPIData.title}}</h2>
+          <p>{{addItem.doubanAPIData.author[0].name}}</p>
+        </div>
       </div>
-    </div>
-    <div class="list">
-      <form name="timeForm" novalidate ng-submit="signupForm()">
+
+
+      <div class="list">
         <label class="item item-input item-stacked-label">
           <span class="input-label">Start Time</span>
           <input type="date" ng-model="addItem.startTime" name="startTime" convert-date-string required>
@@ -38,10 +40,12 @@
           </div>
 
         </label>
+      </div>
 
-        <button type="submit" ng-disabled="timeForm.$invalid" class="button">Submit</button>
-      </form>
-
+    </ion-content>
+    <div class="bottom-button">
+      <button type="submit" ng-disabled="timeForm.$invalid" class="button button-outline button-full button-assertive">OK</button>
+      <button type="button" class="button button-outline button-full button-light" ng-click="cancelAdd()">Cancel</button>
     </div>
-  </ion-content>
+  </form>
 </ion-view>
